--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Tesla</title>
 		<meta charset = "utf-8">
-		<link href = "./fonts.css" rel = "stylesheet">
+		<link rel = "stylesheet" href = "./fonts.css">
 	</head>
 	<body>
 		<header class = "header">
@@ -68,7 +68,9 @@
 					</div>
 				</div>
 				<div class = "order_section-main">
-					<a href="#" class = "order__link">Заказать</a>
+					<div class = order__item_big>
+						<a href="#" class = "order__link order__item_link">Заказать</a>
+					</div>
 				</div>
 			</div>
 			<img class = "control-down">
@@ -121,12 +123,15 @@
 					</div>
 				</div>
 				<div class = "info_future-drive">
-					<img class = "info__icon">
-					<a href="#" class = "info__link">Узнать больше
-					</a>
+					<img class = "info__item_icon info__icon">
+					<div class = "info__item_big">	
+						<a href="#" class = "info__item_link info__link">Узнать больше</a>
+					</div>
 				</div>
 				<div class = "order_future-drive">
-					<a href="#" class = "order__link">Заказать</a>
+					<div class = "order__item_big">
+						<a href="#" class = "order__item_link">Заказать</a>
+					</div>
 				</div>
 			</article>
 			<article class = "section-desc__articles safe-car">
@@ -139,7 +144,7 @@
 						Оценка защиты:
 					</h2>
 					<div class = "star">
-						<div class = "star__title_front safe-car__features">
+						<div class = "star__title_front">
 							Спереди
 						</div>
 						<div class = "star__wrapper">
@@ -196,11 +201,15 @@
 					5 звезд безопасности
 				</div>
 				<div class = "info_safe-car">
-					<img class = "info__icon">
-					<a href="#" class = "info__link">Узнать больше</a>
+					<img class = "info__item_icon info__icon">
+					<div class = "info__item_big">
+						<a href="#" class = "info__item_link info__link">Узнать больше</a>
+					</div>
 				</div>
 				<div  class = "order_safe-car">
-					<a href="#" class = "order__link">Заказать</a>
+					<div class = "order__item_big">	
+						<a href="#" class = "order__link order__item_link">Заказать</a>
+					</div>
 				</div>
 			</article>
 			<div class = "safe-body">
