--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Tesla</title>
 		<meta charset = "utf-8">
-		<link rel = "stylesheet" href = "./fonts.css">
+		<link href = "./fonts.css" rel = "stylesheet">
 	</head>
 	<body>
 		<header class = "header">
@@ -68,9 +68,7 @@
 					</div>
 				</div>
 				<div class = "order_section-main">
-					<div class = order__item_big>
-						<a href="#" class = "order__link order__item_link">Заказать</a>
-					</div>
+					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</div>
 			<img class = "control-down">
@@ -123,15 +121,12 @@
 					</div>
 				</div>
 				<div class = "info_future-drive">
-					<img class = "info__item_icon info__icon">
-					<div class = "info__item_big">	
-						<a href="#" class = "info__item_link info__link">Узнать больше</a>
-					</div>
+					<img class = "info__icon">
+					<a href="#" class = "info__link">Узнать больше
+					</a>
 				</div>
 				<div class = "order_future-drive">
-					<div class = "order__item_big">
-						<a href="#" class = "order__item_link">Заказать</a>
-					</div>
+					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</article>
 			<article class = "section-desc__articles safe-car">
@@ -144,7 +139,7 @@
 						Оценка защиты:
 					</h2>
 					<div class = "star">
-						<div class = "star__title_front">
+						<div class = "star__title_front safe-car__features">
 							Спереди
 						</div>
 						<div class = "star__wrapper">
@@ -201,15 +196,11 @@
 					5 звезд безопасности
 				</div>
 				<div class = "info_safe-car">
-					<img class = "info__item_icon info__icon">
-					<div class = "info__item_big">
-						<a href="#" class = "info__item_link info__link">Узнать больше</a>
-					</div>
+					<img class = "info__icon">
+					<a href="#" class = "info__link">Узнать больше</a>
 				</div>
 				<div  class = "order_safe-car">
-					<div class = "order__item_big">	
-						<a href="#" class = "order__link order__item_link">Заказать</a>
-					</div>
+					<a href="#" class = "order__link">Заказать</a>
 				</div>
 			</article>
 			<div class = "safe-body">
