--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 						<a href = "#" class = "btn__item_link">Тест драйв</a>
 					</div>
 				</div>
-				<div class = "order_section-main">
-					<div class = order__item_big>
-						<a href="#" class = "order__item_link">Заказать</a>
+				<div class = "button_section-main">
+					<div class = button__item_big>
+						<a href="#" class = "button__item_link">Заказать</a>
 					</div>
 				</div>
 			</div>
@@ -82,11 +82,11 @@
 			<div class = "item__interior">
 				<img class = "item__icon_interior">
 			</div>
-			<article class = "section-desc__articles future-drive">
-				<h2 class = "future-drive__title">
+			<article class = "text future-drive">
+				<h2 class = "text__title">
 					Будущее вождения
 				</h2>
-				<p class = "future-drive__content">
+				<p class = "text__content">
 					Модель S обладает в лучшей своем классе вместимостью: в машине поместится до пяти взрослых и двух детей. Оснащена современным 17-дюймовым сенсорным экраном. Усовершенствованная шумовая инженерия создаёт динамику звука, сравнимую со студией звукозаписи, а стеклянная крыша обеспечивает просторный интерьер для каждого пассажира.
 				</p>
 				<div class = "character">
@@ -122,23 +122,23 @@
 						</p>
 					</div>
 				</div>
-				<div class = "info_future-drive">
-					<img class = "info__item_icon">
-					<div class = "info__item_big">	
-						<a href="#" class = "info__item_link">Узнать больше</a>
+				<div class = "button_future-drive">
+					<img class = "button__item_icon">
+					<div class = "button__item_big">	
+						<a href="#" class = "button__item_link">Узнать больше</a>
 					</div>
 				</div>
-				<div class = "order_future-drive">
-					<div class = "order__item_big">
-						<a href="#" class = "order__item_link">Заказать</a>
+				<div class = "button_future-drive">
+					<div class = "button__item_big">
+						<a href="#" class = "button__item_link">Заказать</a>
 					</div>
 				</div>
 			</article>
-			<article class = "section-desc__articles safe-car">
-				<h2 class = "safe-car__title">
+			<article class = "text safe-car">
+				<h2 class = "text__title">
 					Самый безопасный автомобиль в мире
 				</h2>
-				<p class = "safe-car__content">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
+				<p class = "text__content">Модель S достигла наивысшей оценки безопасности любого автомобиля, когда-либо испытанного, и установила рекорд по наименьшей вероятности трамвы пассажиров - от несчастных случаев на переднем, боковом, заднем сидении и в ДТП с переворотом авто.</p>
 				<div class = "features">
 					<h2 class = "features__title">
 						Оценка защиты:
@@ -200,15 +200,15 @@
 					<img class = "score__icon">
 					5 звезд безопасности
 				</div>
-				<div class = "info_safe-car">
-					<img class = "info__item_icon">
-					<div class = "info__item_big">
-						<a href="#" class = "info__item_link">Узнать больше</a>
+				<div class = "button_safe-car">
+					<img class = "button__item_icon">
+					<div class = "button__item_big">
+						<a href="#" class = "button__item_link">Узнать больше</a>
 					</div>
 				</div>
-				<div  class = "order_safe-car">
-					<div class = "order__item_big">	
-						<a href="#" class = "order__item_link">Заказать</a>
+				<div  class = "button_safe-car">
+					<div class = "button__item_big">	
+						<a href="#" class = "button__item_link">Заказать</a>
 					</div>
 				</div>
 			</article>
