new changed files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 					<a href = "#" class = "header__link">Roadster</a>
 					<a href = "#" class = "header__link">Energy</a>
 				</div>
-				<div class = "header__wrapper_clear"></div>
 				<div class = "header__wrapper">
 						<a href = "#" class = "header__wrapper_link header__link">Магазин</a>
 						<a href = "#" class = "header__wrapper_link header__link">Войти</a>
@@ -46,10 +45,11 @@
 					<img class = "car-logo" src = "./Project/tesla_hd.svg" alt = "background-car">
 				</div>
 				<div class = "section-main__logo">
-					<img class = "main-logo" src = "./Project/tesla-wordmark-red_big.svg" alt = "logo-tesla">
+					<img class = "main-logo_big" src = "./Project/tesla-wordmark-red_big.svg" alt = "logo-tesla">
 				</div>
 			</div>
 			<div class = "section-main__wrapper">
+				<div class = "section-main__wrapper_character">
 					<div class = "character">	
 						<img class = "character__item_icon" src = "./Project/speedometer.svg" alt = "logo-speedometer">
 						<div class = "character__item_big">
@@ -70,16 +70,15 @@
 							<p class = "character__item_small">запас хода</p>
 						</div>
 					</div>
+				</div>
 				<div class = "btn_test-drive">
 					<img class = "btn__item_icon" src = "./Project/steering-wheel.svg" alt = "logo-steering-wheel">
 					<div class = "btn__item_big">
 						<a href = "#" class = "button__item_link">Тест драйв</a>
 					</div>
 				</div>
-				<div class = "button_section-main">
 					<div class = button__item_big>
-						<a href="#" class = "button__item_link btn__item_order">Заказать</a>
-					</div>
+					<a href="#" class = "button__item_link btn__item_order">Заказать</a>
 				</div>
 			</div>
 			<div class = "section-main__img_control-down">
